MDEV-7770: Online DDL progress output contains incorrectly printed index names

Index names were not formatted correctly.